--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
           Want more details?
       </a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="main">
+      <p id="add-item">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+        <div class="new-task-input">
           <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
+      <ul id="todo-task">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
