--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="header">
+    <header>
       <img src="./eisenhower-matrix.jpg">
       <a class="more_inf" 
           href="https://goal-life.com/page/method/matrix-eisenhower">
           Want more details?
       </a>
-    </div>
-    <div class="main">
-      <p id="add-item">
+    </header>
+    <main>
+      <section id="add-item">
         <label for="new-task">Add Item</label>
         <div class="new-task-input">
           <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
-      </p>
-      <h3>Todo</h3>
+      </section>
+      <section>
+        <h3>Todo</h3>
       <ul id="todo-task">
         <li>
           <input type="checkbox">
@@ -42,7 +43,9 @@
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
+      </section>
+      <section>
+        <h3>Completed</h3>
       <ul id="completed-tasks">
         <li>
           <input type="checkbox" checked>
@@ -54,7 +57,8 @@
           </button>
         </li>
       </ul>
-    </div>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
